Give mandelbrot_simd real SIMD in C, Rust, Java, and Python
C/Rust use AVX2 intrinsics scoped via target attributes, Java uses the
incubator Vector API, Python uses numpy's whole-grid vectorization. Every
language now beats its own scalar mandelbrot time at the same size.